- Improve Sonar - Bugfixes dies das